set the margin styling of h2 element to prevent element being too close to the border

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,6 +65,10 @@ body {
     overflow-y: auto;
 }
 
+#exp-tracker-container main h2 {
+    margin-left: 10px;
+}
+
 #login-container, #signup-container {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
